fix order and correct info oder on swagger
